--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kitchen-utensil-app",
   "version": "0.1.0",
+  "homepage": "https://mabel-uche.github.io/uc-global",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -9,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
